# Cinnamon

./: configure.ac  project.config
js/: Makefile.am
js/applets/: Makefile.am
