appletsdir = $(pkgdatadir)/applets

nobase_dist_applets_DATA = \
	a11y@cinnamon.org/applet.js	\
	a11y@cinnamon.org/metadata.json	\
	bluetooth@cinnamon.org/applet.js	\
	bluetooth@cinnamon.org/metadata.json	\
	brightness@cinnamon.org/applet.js	\
	brightness@cinnamon.org/metadata.json	\
	calendar@cinnamon.org/applet.js	\
	calendar@cinnamon.org/metadata.json	\
	expo@cinnamon.org/applet.js	\
	expo@cinnamon.org/cinnamon-expo-symbolic.svg	\
	expo@cinnamon.org/metadata.json	\
	expo@cinnamon.org/icon.png	\
	keyboard@cinnamon.org/applet.js	\
	keyboard@cinnamon.org/metadata.json	\
	keyboard@cinnamon.org/flags/yt.png	\
	keyboard@cinnamon.org/flags/mn.png	\
	keyboard@cinnamon.org/flags/kg.png	\
	keyboard@cinnamon.org/flags/be.png	\
	keyboard@cinnamon.org/flags/gp.png	\
	keyboard@cinnamon.org/flags/bv.png	\
	keyboard@cinnamon.org/flags/bz.png	\
	keyboard@cinnamon.org/flags/vc.png	\
	keyboard@cinnamon.org/flags/brai.png	\
	keyboard@cinnamon.org/flags/gb.png	\
	keyboard@cinnamon.org/flags/uy.png	\
	keyboard@cinnamon.org/flags/np.png	\
	keyboard@cinnamon.org/flags/epo.png	\
	keyboard@cinnamon.org/flags/ng.png	\
	keyboard@cinnamon.org/flags/je.png	\
	keyboard@cinnamon.org/flags/ky.png	\
	keyboard@cinnamon.org/flags/st.png	\
	keyboard@cinnamon.org/flags/so.png	\
	keyboard@cinnamon.org/flags/gd.png	\
	keyboard@cinnamon.org/flags/ki.png	\
	keyboard@cinnamon.org/flags/me.png	\
	keyboard@cinnamon.org/flags/sd.png	\
	keyboard@cinnamon.org/flags/nc.png	\
	keyboard@cinnamon.org/flags/bt.png	\
	keyboard@cinnamon.org/flags/bd.png	\
	keyboard@cinnamon.org/flags/ls.png	\
	keyboard@cinnamon.org/flags/as.png	\
	keyboard@cinnamon.org/flags/tk.png	\
	keyboard@cinnamon.org/flags/kp.png	\
	keyboard@cinnamon.org/flags/ro.png	\
	keyboard@cinnamon.org/flags/zm.png	\
	keyboard@cinnamon.org/flags/ml.png	\
	keyboard@cinnamon.org/flags/mx.png	\
	keyboard@cinnamon.org/flags/pr.png	\
	keyboard@cinnamon.org/flags/la.png	\
	keyboard@cinnamon.org/flags/do.png	\
	keyboard@cinnamon.org/flags/tf.png	\
	keyboard@cinnamon.org/flags/ec.png	\
	keyboard@cinnamon.org/flags/tw.png	\
	keyboard@cinnamon.org/flags/ye.png	\
	keyboard@cinnamon.org/flags/za.png	\
	keyboard@cinnamon.org/flags/br.png	\
	keyboard@cinnamon.org/flags/my.png	\
	keyboard@cinnamon.org/flags/vn.png	\
	keyboard@cinnamon.org/flags/mt.png	\
	keyboard@cinnamon.org/flags/ke.png	\
	keyboard@cinnamon.org/flags/gq.png	\
	keyboard@cinnamon.org/flags/in.png	\
	keyboard@cinnamon.org/flags/no.png	\
	keyboard@cinnamon.org/flags/vg.png	\
	keyboard@cinnamon.org/flags/lb.png	\
	keyboard@cinnamon.org/flags/au.png	\
	keyboard@cinnamon.org/flags/tc.png	\
	keyboard@cinnamon.org/flags/nl.png	\
	keyboard@cinnamon.org/flags/tv.png	\
	keyboard@cinnamon.org/flags/sk.png	\
	keyboard@cinnamon.org/flags/py.png	\
	keyboard@cinnamon.org/flags/tj.png	\
	keyboard@cinnamon.org/flags/gg.png	\
	keyboard@cinnamon.org/flags/re.png	\
	keyboard@cinnamon.org/flags/nf.png	\
	keyboard@cinnamon.org/flags/aq.png	\
	keyboard@cinnamon.org/flags/bo.png	\
	keyboard@cinnamon.org/flags/gr.png	\
	keyboard@cinnamon.org/flags/dm.png	\
	keyboard@cinnamon.org/flags/af.png	\
	keyboard@cinnamon.org/flags/md.png	\
	keyboard@cinnamon.org/flags/ps.png	\
	keyboard@cinnamon.org/flags/gw.png	\
	keyboard@cinnamon.org/flags/wf.png	\
	keyboard@cinnamon.org/flags/mu.png	\
	keyboard@cinnamon.org/flags/gy.png	\
	keyboard@cinnamon.org/flags/cv.png	\
	keyboard@cinnamon.org/flags/sy.png	\
	keyboard@cinnamon.org/flags/bm.png	\
	keyboard@cinnamon.org/flags/it.png	\
	keyboard@cinnamon.org/flags/lu.png	\
	keyboard@cinnamon.org/flags/dz.png	\
	keyboard@cinnamon.org/flags/ar.png	\
	keyboard@cinnamon.org/flags/mw.png	\
	keyboard@cinnamon.org/flags/sn.png	\
	keyboard@cinnamon.org/flags/bb.png	\
	keyboard@cinnamon.org/flags/ve.png	\
	keyboard@cinnamon.org/flags/sg.png	\
	keyboard@cinnamon.org/flags/kn.png	\
	keyboard@cinnamon.org/flags/mg.png	\
	keyboard@cinnamon.org/flags/dk.png	\
	keyboard@cinnamon.org/flags/rs.png	\
	keyboard@cinnamon.org/flags/kz.png	\
	keyboard@cinnamon.org/flags/al.png	\
	keyboard@cinnamon.org/flags/sc.png	\
	keyboard@cinnamon.org/flags/qa.png	\
	keyboard@cinnamon.org/flags/sl.png	\
	keyboard@cinnamon.org/flags/cz.png	\
	keyboard@cinnamon.org/flags/va.png	\
	keyboard@cinnamon.org/flags/bw.png	\
	keyboard@cinnamon.org/flags/pa.png	\
	keyboard@cinnamon.org/flags/mr.png	\
	keyboard@cinnamon.org/flags/cr.png	\
	keyboard@cinnamon.org/flags/cw.png	\
	keyboard@cinnamon.org/flags/gn.png	\
	keyboard@cinnamon.org/flags/zw.png	\
	keyboard@cinnamon.org/flags/ad.png	\
	keyboard@cinnamon.org/flags/im.png	\
	keyboard@cinnamon.org/flags/bh.png	\
	keyboard@cinnamon.org/flags/kw.png	\
	keyboard@cinnamon.org/flags/ge.png	\
	keyboard@cinnamon.org/flags/aw.png	\
	keyboard@cinnamon.org/flags/th.png	\
	keyboard@cinnamon.org/flags/iq.png	\
	keyboard@cinnamon.org/flags/ma.png	\
	keyboard@cinnamon.org/flags/cg.png	\
	keyboard@cinnamon.org/flags/jm.png	\
	keyboard@cinnamon.org/flags/ee.png	\
	keyboard@cinnamon.org/flags/kr.png	\
	keyboard@cinnamon.org/flags/aa.png	\
	keyboard@cinnamon.org/flags/es.png	\
	keyboard@cinnamon.org/flags/mv.png	\
	keyboard@cinnamon.org/flags/bj.png	\
	keyboard@cinnamon.org/flags/fm.png	\
	keyboard@cinnamon.org/flags/ms.png	\
	keyboard@cinnamon.org/flags/ck.png	\
	keyboard@cinnamon.org/flags/cx.png	\
	keyboard@cinnamon.org/flags/ir.png	\
	keyboard@cinnamon.org/flags/ci.png	\
	keyboard@cinnamon.org/flags/eh.png	\
	keyboard@cinnamon.org/flags/tt.png	\
	keyboard@cinnamon.org/flags/gi.png	\
	keyboard@cinnamon.org/flags/hr.png	\
	keyboard@cinnamon.org/flags/sm.png	\
	keyboard@cinnamon.org/flags/ax.png	\
	keyboard@cinnamon.org/flags/kh.png	\
	keyboard@cinnamon.org/flags/id.png	\
	keyboard@cinnamon.org/flags/fo.png	\
	keyboard@cinnamon.org/flags/lc.png	\
	keyboard@cinnamon.org/flags/ug.png	\
	keyboard@cinnamon.org/flags/ba.png	\
	keyboard@cinnamon.org/flags/ph.png	\
	keyboard@cinnamon.org/flags/bi.png	\
	keyboard@cinnamon.org/flags/mz.png	\
	keyboard@cinnamon.org/flags/km.png	\
	keyboard@cinnamon.org/flags/li.png	\
	keyboard@cinnamon.org/flags/bq.png	\
	keyboard@cinnamon.org/flags/pf.png	\
	keyboard@cinnamon.org/flags/cf.png	\
	keyboard@cinnamon.org/flags/ie.png	\
	keyboard@cinnamon.org/flags/er.png	\
	keyboard@cinnamon.org/flags/mh.png	\
	keyboard@cinnamon.org/flags/vu.png	\
	keyboard@cinnamon.org/flags/ai.png	\
	keyboard@cinnamon.org/flags/gs.png	\
	keyboard@cinnamon.org/flags/tg.png	\
	keyboard@cinnamon.org/flags/lk.png	\
	keyboard@cinnamon.org/flags/tm.png	\
	keyboard@cinnamon.org/flags/vi.png	\
	keyboard@cinnamon.org/flags/fr.png	\
	keyboard@cinnamon.org/flags/hn.png	\
	keyboard@cinnamon.org/flags/pn.png	\
	keyboard@cinnamon.org/flags/nr.png	\
	keyboard@cinnamon.org/flags/us.png	\
	keyboard@cinnamon.org/flags/pe.png	\
	keyboard@cinnamon.org/flags/ly.png	\
	keyboard@cinnamon.org/flags/jo.png	\
	keyboard@cinnamon.org/flags/ae.png	\
	keyboard@cinnamon.org/flags/bn.png	\
	keyboard@cinnamon.org/flags/um.png	\
	keyboard@cinnamon.org/flags/bf.png	\
	keyboard@cinnamon.org/flags/lr.png	\
	keyboard@cinnamon.org/flags/sh.png	\
	keyboard@cinnamon.org/flags/ne.png	\
	keyboard@cinnamon.org/flags/hu.png	\
	keyboard@cinnamon.org/flags/gh.png	\
	keyboard@cinnamon.org/flags/ws.png	\
	keyboard@cinnamon.org/flags/il.png	\
	keyboard@cinnamon.org/flags/sv.png	\
	keyboard@cinnamon.org/flags/ua.png	\
	keyboard@cinnamon.org/flags/td.png	\
	keyboard@cinnamon.org/flags/bl.png	\
	keyboard@cinnamon.org/flags/fj.png	\
	keyboard@cinnamon.org/flags/ch.png	\
	keyboard@cinnamon.org/flags/se.png	\
	keyboard@cinnamon.org/flags/pg.png	\
	keyboard@cinnamon.org/flags/bs.png	\
	keyboard@cinnamon.org/flags/de.png	\
	keyboard@cinnamon.org/flags/az.png	\
	keyboard@cinnamon.org/flags/si.png	\
	keyboard@cinnamon.org/flags/cn.png	\
	keyboard@cinnamon.org/flags/am.png	\
	keyboard@cinnamon.org/flags/pw.png	\
	keyboard@cinnamon.org/flags/io.png	\
	keyboard@cinnamon.org/flags/ao.png	\
	keyboard@cinnamon.org/flags/mo.png	\
	keyboard@cinnamon.org/flags/sb.png	\
	keyboard@cinnamon.org/flags/sa.png	\
	keyboard@cinnamon.org/flags/pt.png	\
	keyboard@cinnamon.org/flags/is.png	\
	keyboard@cinnamon.org/flags/cm.png	\
	keyboard@cinnamon.org/flags/at.png	\
	keyboard@cinnamon.org/flags/ag.png	\
	keyboard@cinnamon.org/flags/gu.png	\
	keyboard@cinnamon.org/flags/om.png	\
	keyboard@cinnamon.org/flags/tz.png	\
	keyboard@cinnamon.org/flags/rw.png	\
	keyboard@cinnamon.org/flags/sx.png	\
	keyboard@cinnamon.org/flags/mc.png	\
	keyboard@cinnamon.org/flags/lt.png	\
	keyboard@cinnamon.org/flags/cl.png	\
	keyboard@cinnamon.org/flags/by.png	\
	keyboard@cinnamon.org/flags/fi.png	\
	keyboard@cinnamon.org/flags/sj.png	\
	keyboard@cinnamon.org/flags/sr.png	\
	keyboard@cinnamon.org/flags/sz.png	\
	keyboard@cinnamon.org/flags/ni.png	\
	keyboard@cinnamon.org/flags/to.png	\
	keyboard@cinnamon.org/flags/cy.png	\
	keyboard@cinnamon.org/flags/ru.png	\
	keyboard@cinnamon.org/flags/ara.png	\
	keyboard@cinnamon.org/flags/mp.png	\
	keyboard@cinnamon.org/flags/mf.png	\
	keyboard@cinnamon.org/flags/hm.png	\
	keyboard@cinnamon.org/flags/tn.png	\
	keyboard@cinnamon.org/flags/dj.png	\
	keyboard@cinnamon.org/flags/na.png	\
	keyboard@cinnamon.org/flags/pl.png	\
	keyboard@cinnamon.org/flags/pk.png	\
	keyboard@cinnamon.org/flags/pm.png	\
	keyboard@cinnamon.org/flags/jp.png	\
	keyboard@cinnamon.org/flags/tr.png	\
	keyboard@cinnamon.org/flags/mm.png	\
	keyboard@cinnamon.org/flags/eg.png	\
	keyboard@cinnamon.org/flags/ht.png	\
	keyboard@cinnamon.org/flags/gl.png	\
	keyboard@cinnamon.org/flags/cd.png	\
	keyboard@cinnamon.org/flags/nz.png	\
	keyboard@cinnamon.org/flags/hk.png	\
	keyboard@cinnamon.org/flags/cu.png	\
	keyboard@cinnamon.org/flags/co.png	\
	keyboard@cinnamon.org/flags/bg.png	\
	keyboard@cinnamon.org/flags/gm.png	\
	keyboard@cinnamon.org/flags/tl.png	\
	keyboard@cinnamon.org/flags/cc.png	\
	keyboard@cinnamon.org/flags/ss.png	\
	keyboard@cinnamon.org/flags/gt.png	\
	keyboard@cinnamon.org/flags/fk.png	\
	keyboard@cinnamon.org/flags/mq.png	\
	keyboard@cinnamon.org/flags/ga.png	\
	keyboard@cinnamon.org/flags/uz.png	\
	keyboard@cinnamon.org/flags/lv.png	\
	keyboard@cinnamon.org/flags/gf.png	\
	keyboard@cinnamon.org/flags/ca.png	\
	keyboard@cinnamon.org/flags/et.png	\
	keyboard@cinnamon.org/flags/nu.png	\
	keyboard@cinnamon.org/flags/mk.png	\
	menu@cinnamon.org/applet.js	\
	menu@cinnamon.org/metadata.json	\
	network@cinnamon.org/applet.js	\
	network@cinnamon.org/metadata.json	\
	notifications@cinnamon.org/applet.js	\
	notifications@cinnamon.org/empty-notif-symbolic.svg	\
	notifications@cinnamon.org/critical-notif-symbolic.svg	\
	notifications@cinnamon.org/icon.svg	\
	notifications@cinnamon.org/low-notif-symbolic.svg	\
	notifications@cinnamon.org/metadata.json	\
	notifications@cinnamon.org/alt-critical-notif-symbolic.svg	\
	notifications@cinnamon.org/normal-notif-symbolic.svg	\
	panel-launchers@cinnamon.org/applet.js	\
	panel-launchers@cinnamon.org/metadata.json	\
	panel-launchers@cinnamon.org/cinnamon-add-panel-launcher.glade	\
	panel-launchers@cinnamon.org/cinnamon-add-panel-launcher.py	\
	power@cinnamon.org/applet.js	\
	power@cinnamon.org/metadata.json	\
	recent@cinnamon.org/applet.js	\
	recent@cinnamon.org/metadata.json	\
	removable-drives@cinnamon.org/applet.js	\
	removable-drives@cinnamon.org/metadata.json	\
	scale@cinnamon.org/applet.js	\
	scale@cinnamon.org/metadata.json	\
	scale@cinnamon.org/icon.png	\
	scale@cinnamon.org/cinnamon-scale-symbolic.svg	\
	settings@cinnamon.org/applet.js	\
	settings@cinnamon.org/metadata.json	\
	show-desktop@cinnamon.org/applet.js	\
	show-desktop@cinnamon.org/metadata.json	\
	sound@cinnamon.org/applet.js	\
	sound@cinnamon.org/metadata.json	\
	systray@cinnamon.org/applet.js	\
	systray@cinnamon.org/metadata.json	\
	trash@cinnamon.org/applet.js	\
	trash@cinnamon.org/metadata.json	\
	window-list@cinnamon.org/applet.js	\
	window-list@cinnamon.org/metadata.json	\
	windows-quick-list@cinnamon.org/applet.js	\
	windows-quick-list@cinnamon.org/windows-quick-list-symbolic.svg	\
	windows-quick-list@cinnamon.org/metadata.json	\
	windows-quick-list@cinnamon.org/icon.png	\
	workspace-switcher@cinnamon.org/applet.js	\
	workspace-switcher@cinnamon.org/metadata.json	\
	xrandr@cinnamon.org/applet.js	\
	xrandr@cinnamon.org/stylesheet.css	\
	xrandr@cinnamon.org/metadata.json
